# evo-nexus

./: .dockerignore  .env.example  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.template.md  CONTRIBUTING.md  Dockerfile  Dockerfile.swarm  Dockerfile.swarm.dashboard  HERMES_RUNTIME.md  LICENSE  Makefile  README.md  ROADMAP.md  ROTINAS.md  ROUTINES.md  backup.py  docker-compose.yml  entrypoint.sh  pyproject.toml  scheduler.py  setup.py  start-dashboard.sh  start-services.sh
.claude/agents/: apex-architect.md  atlas-project.md  bolt-executor.md  canvas-designer.md  clawdia-assistant.md  flow-git.md  flux-finance.md  flux-financeiro.md  grid-tester.md  helm-conductor.md  kai-personal-assistant.md  lumen-learning.md  mako-marketing.md  mentor-courses.md  mirror-retro.md  nex-comercial.md  nex-sales.md  oracle.md  pixel-social-media.md  prism-scientist.md  pulse-community.md  quill-writer.md  raven-critic.md  sage-strategy.md  scout-explorer.md  scroll-docs.md  trail-tracer.md  vault-security.md  zara-cs.md  zen-simplifier.md
.claude/commands/: atlas.md  clawdia.md  flux.md  kai.md  mentor.md  nex.md  pixel.md  pulse.md  sage.md
.claude/rules/: skills.md
.claude/templates/: course-index.md  course-module.md  course-roadmap.md  end-of-day-log.md  fechamento-mensal.md  lesson-plan.md  meeting-summary.md  (+2 more)
ADWs/: hermes_adapter.py  hermes_native.py  runner.py  test_hermes_integration.py
cli/: package.json
config/: heartbeats.example.yaml  providers.example.json  routines.yaml.example
docs/: architecture.md  getting-started.md  introduction.md  llms-full.txt
(+212 files in other folders)
