[project]
name = "claude-cowork-workspace"
version = "0.1.0"
description = "Workspace operacional com ADWs e rotinas automatizadas"
requires-python = ">=3.10"
dependencies = [
    "rich>=13.0",
    "python-telegram-bot>=21.0",
    "schedule>=1.2",
]

[tool.uv]
dev-dependencies = []

[tool.uv.workspace]
exclude = [
    "dashboard",
]
